--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,13 @@
         android:hint="@string/number2"
         android:inputType="numberDecimal" />
 
+    <!-- Výběr operace -->
+    <Spinner
+        android:id="@+id/spinnerOperation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/operations_array_v2" />
+
     <!-- Tlačítko pro výpočet -->
     <Button
         android:id="@+id/buttonCalculate"
